examples/test/testpolicy8951.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8951
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key8: value21
      key22: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value8
          key4: value5
      podSelector:
        matchLabels:
          key44: value45
          key37: value19
